--- a/pages/index.html
+++ b/pages/index.html
@@ -1,62 +1,174 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Шкільна їдальня</title>
     <!-- Підключаємо стилі -->
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <!-- Підключення основних стилів -->
-  </head>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap"
-    rel="stylesheet"
-  />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
+    <style>
+      /* Основні стилі */
+      body {
+          font-family: 'Orbitron', sans-serif;
+          background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
+          color: #fff;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh; /* Встановлюємо мінімальну висоту */
+      }
+  
+      /* Основний контент */
+      main {
+          flex: 1; /* Дозволяє основному контенту займати весь доступний простір */
+      }
+  
+      /* Героїчний блок */
+      .hero {
+          background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)), url('https://via.placeholder.com/1500x600') center/cover no-repeat;
+          height: 90vh; /* Збільшили висоту до 90vh */
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          color: #fff;
+          padding: 0 20px;
+          box-sizing: border-box;
+      }
+  
+      /* Героїчний блок текст */
+      .hero h1 {
+          font-size: 3rem;
+          margin-bottom: 20px;
+          text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); /* додаємо тінь для кращої видимості */
+      }
+  
+      .hero p {
+          font-size: 1.2rem;
+          margin-bottom: 30px;
+      }
+  
+      /* Кнопка CTA */
+      .cta-button {
+          background: linear-gradient(135deg, #f1c40f, #e67e22);
+          color: #000;
+          padding: 15px 30px;
+          font-size: 1.2rem;
+          text-decoration: none;
+          border-radius: 5px;
+          transition: background 0.3s ease;
+          margin-top: 40px; /* Додаємо відступ зверху */
+      }
+  
+      .cta-button:hover {
+          background: linear-gradient(135deg, #e67e22, #f1c40f);
+      }
+  
+      /* Футер */
+      footer {
+          background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6));
+          color: #fff;
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          flex-wrap: wrap;
+          text-align: center;
+          width: 100%;
+      }
+  
+      footer h2 {
+          margin: 0;
+          font-size: 1.5rem;
+      }
+  
+      footer .footer-left, footer .footer-right {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          margin: 10px 0;
+      }
+  
+      footer .footer-info {
+          flex-basis: 100%;
+          margin-top: 20px;
+          font-size: 0.9rem;
+      }
+  
+      footer a {
+          text-decoration: none;
+          color: #f1c40f;
+          transition: color 0.3s ease;
+          margin: 0 10px;
+      }
+  
+      footer a:hover {
+          color: #e67e22;
+      }
+  
+      /* Для більш компактних екранів */
+      @media (max-width: 768px) {
+          footer {
+              flex-direction: column;
+          }
+  
+          footer .footer-left, footer .footer-right {
+              flex: none;
+              margin: 5px 0;
+          }
+      }
+  </style>
+  
+  
+</head>
 
-  <body>
+<body>
     <!-- Хедер -->
-
     <header>
-      <div class="header-container">
         <nav>
-          <ul>
-            <li><a href="./index.html">Головна</a></li>
-            <li><a href="./menu.html">Меню</a></li>
-            <li><a href="../pages/tests/index.html">Тести</a></li>
-            <li><a href="./games.html">Ігри</a></li>
-            <li><a href="./about.html">Про нас</a></li>
-            <li><a href="./contacts.html">Контакти</a></li>
-          </ul>
+            <ul>
+                <li><a href="./index.html">Головна</a></li>
+                <li><a href="menu.html">Меню</a></li>
+                <li><a href="tests/index.html">Тести</a></li>
+                <li><a href=".././games.html">Ігри</a></li>
+            </ul>
         </nav>
-      </div>
     </header>
 
     <!-- Основний контент -->
     <div class="hero">
-      <h1>Ласкаво просимо до шкільної їдальні!</h1>
-      <p>
-        Вибирайте страви, заробляйте зірочки, проходьте тести та грайте в ігри!
-      </p>
-      <a href="./about.html" class="cta-button">Дізнатися більше</a>
+        <h1>Ласкаво просимо до шкільної їдальні!</h1>
+        <p>
+            Вибирайте страви, заробляйте зірочки, проходьте тести та грайте в ігри!
+        </p>
+        <img src="https://smartregion.pl.ua/storage/sb_projects/300/L68KgHyF82kObM4uOjBxhaeykQ2xH01k6MHNp4JQ.jpeg" alt="Страви в їдальні">
+        <a href="./about.html" class="cta-button">Дізнатися більше</a>
     </div>
 
     <!-- Футер -->
     <footer>
-      <div class="footer-left">
-        <h2>Шкільна їдальня</h2>
-      </div>
+        <div class="footer-left">
+            <h2>Шкільна їдальня</h2>
+        </div>
 
-      <div class="footer-right">
-        <a href="mailto:schoolcanteen@example.com">Зв'язатися з нами</a>
-        <a href="#">Політика конфіденційності</a>
-      </div>
+        <div class="footer-right">
+            <a href="./contacts.html">Зв'язатися з нами</a>
+            <a href="./privacy-policy.html">Політика конфіденційності</a>
+        </div>
 
-      <div class="footer-info">
-        <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
-      </div>
+        <div class="footer-info">
+            <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
+        </div>
     </footer>
 
     <!-- Підключення скриптів -->
     <script src="js/script.js"></script>
-  </body>
+</body>
+
 </html>
