--- a/pages/about.html
+++ b/pages/about.html
@@ -1,178 +1,299 @@
 <!DOCTYPE html>
 <html lang="uk">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Про нас - Шкільна їдальня</title>
-    <link rel="stylesheet" href="C:\Users\Admin\Documents\GitHub\site_competition\school-canteen-project\css\styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <!-- Підключення стилів для навігації -->
+    <link rel="stylesheet" href="./navigation.css" />
     <style>
-        /* Оновлені стилі для сторінки "Про нас" */
-        body {
-            font-family: "Orbitron", sans-serif;
-            background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-            margin: 0;
-            padding: 0;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
+      /* Оновлені стилі для сторінки "Про нас" */
+      /* Основні стилі для всього сайту */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Arial", sans-serif;
+      }
 
-        header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 15px 0;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            animation: slideIn 0.8s ease-out;
-        }
+      /* Базовий стиль для body */
+      body {
+        background: #f4f7fc;
+        color: #333;
+        font-size: 16px;
+      }
 
+      /* Стилі для хедера */
+      header {
+        background-color: #2a2a72; /* Темно-синій фон */
+        padding: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+      }
+
+      /* Навігаційне меню */
+      nav ul {
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+      }
+
+      nav ul li {
+        margin: 0 15px;
+      }
+
+      nav ul li a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 18px;
+        transition: color 0.3s, transform 0.3s ease-in-out;
+        padding: 5px 10px;
+        border-radius: 5px;
+      }
+
+      nav ul li a:hover,
+      nav ul li a:focus {
+        color: #ffcc00; /* Золотистий колір при наведенні */
+        transform: scale(1.1);
+      }
+
+      /* Стилі для мобільних пристроїв */
+      @media (max-width: 768px) {
         nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
+          flex-direction: column;
+          align-items: flex-start;
         }
 
         nav ul li {
-            margin: 0 15px;
+          margin: 10px 0;
+        }
+      }
+
+      /* Стилі для активної сторінки */
+      nav ul li a.active {
+        color: #ffcc00; /* Виділення активного елемента */
+        font-weight: bold;
+      }
+
+      /* Основний контент */
+      main {
+        padding-top: 100px; /* Залишає місце для фіксованого хедера */
+        text-align: center;
+      }
+
+      /* Стилі для футера */
+      footer {
+        text-align: center;
+        background-color: #2a2a72;
+        color: #fff;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
+
+      /* Стилі для кнопок (якщо є) */
+      button {
+        background-color: #ffcc00;
+        color: #2a2a72;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      button:hover {
+        background-color: #ff9900;
+      }
+
+      body {
+        font-family: "Orbitron", sans-serif;
+        background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+        margin: 0;
+        padding: 0;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        overflow-x: hidden;
+      }
+
+      header {
+        background: rgba(0, 0, 0, 0.7);
+        padding: 15px 0;
+        text-align: center;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        animation: slideIn 0.8s ease-out;
+      }
+
+      nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+      }
+
+      nav ul li {
+        margin: 0 15px;
+      }
+
+      nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        transition: color 0.3s ease, transform 0.3s ease;
+        font-size: 18px;
+      }
+
+      nav ul li a:hover {
+        color: #ff9a9e;
+        transform: scale(1.1);
+        text-shadow: 0 0 8px #ff9a9e;
+      }
+
+      /* Анімація для заголовка */
+      @keyframes slideIn {
+        0% {
+          transform: translateY(-100%);
         }
 
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease, transform 0.3s ease;
-            font-size: 18px;
+        100% {
+          transform: translateY(0);
+        }
+      }
+
+      .about-section {
+        text-align: center;
+        padding: 80px 20px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        margin: 50px auto;
+        max-width: 800px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        animation: fadeInUp 1s ease-out;
+      }
+
+      .about-section h1 {
+        font-size: 3.5em;
+        text-shadow: 0 0 10px #fff, 0 0 20px #66a6ff;
+        margin-bottom: 20px;
+      }
+
+      .about-section p {
+        font-size: 1.4em;
+        line-height: 1.6;
+        color: #f0f0f0;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      }
+
+      footer {
+        background: rgba(0, 0, 0, 0.7);
+        padding: 20px;
+        text-align: center;
+        color: white;
+        font-size: 1em;
+        margin-top: auto;
+        position: relative;
+        box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.3);
+      }
+
+      footer p {
+        margin: 0;
+      }
+
+      /* Анімація для появи елементів */
+      @keyframes fadeInUp {
+        0% {
+          opacity: 0;
+          transform: translateY(20px);
         }
 
-        nav ul li a:hover {
-            color: #ff9a9e;
-            transform: scale(1.1);
-            text-shadow: 0 0 8px #ff9a9e;
+        100% {
+          opacity: 1;
+          transform: translateY(0);
         }
+      }
 
-        /* Анімація для заголовка */
-        @keyframes slideIn {
-            0% {
-                transform: translateY(-100%);
-            }
+      /* Стиль для кнопки повернення на головну */
+      .btn-home {
+        padding: 12px 24px;
+        background-color: #66a6ff;
+        color: white;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 50px;
+        text-decoration: none;
+        display: inline-block;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        margin-top: 20px;
+      }
 
-            100% {
-                transform: translateY(0);
-            }
-        }
+      .btn-home:hover {
+        background-color: #ff6a6a;
+        transform: scale(1.05);
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+      }
 
-        .about-section {
-            text-align: center;
-            padding: 80px 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            margin: 50px auto;
-            max-width: 800px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            animation: fadeInUp 1s ease-out;
-        }
-
+      /* Додаткові стилі для адаптивності */
+      @media (max-width: 768px) {
         .about-section h1 {
-            font-size: 3.5em;
-            text-shadow: 0 0 10px #fff, 0 0 20px #66a6ff;
-            margin-bottom: 20px;
+          font-size: 2.5em;
         }
 
         .about-section p {
-            font-size: 1.4em;
-            line-height: 1.6;
-            color: #f0f0f0;
-            text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+          font-size: 1.2em;
         }
 
-        footer {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            text-align: center;
-            color: white;
-            font-size: 1em;
-            margin-top: auto;
-            position: relative;
-            box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.3);
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        /* Анімація для появи елементів */
-        @keyframes fadeInUp {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Стиль для кнопки повернення на головну */
         .btn-home {
-            padding: 12px 24px;
-            background-color: #66a6ff;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            border-radius: 50px;
-            text-decoration: none;
-            display: inline-block;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+          padding: 10px 20px;
+          font-size: 16px;
         }
-
-        .btn-home:hover {
-            background-color: #ff6a6a;
-            transform: scale(1.05);
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
-        }
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Головна</a></li>
-                <li><a href="menu.html">Меню</a></li>
-                <li><a href="tests.html">Тести</a></li>
-                <li><a href="games.html">Ігри</a></li>
-                <li><a href="about.html">Про нас</a></li>
-                <li><a href="contacts.html">Контакти</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Головна</a></li>
+          <li><a href="../menu.html">Меню</a></li>
+          <li><a href="../tests/index.html">Тести</a></li>
+          <li><a href="../games.html">Ігри</a></li>
+          <li><a href="./contacts.html">Контакти</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section class="about-section">
-            <h1>Про нашу шкільну їдальню</h1>
-            <p>
-                Ми пропонуємо свіжі та смачні страви для учнів нашої школи. Наша мета
-                - забезпечити кожного смачними та корисними стравами!
-            </p>
-            <a href="index.html" class="btn-home">Повернутися на головну</a>
-        </section>
+      <section class="about-section">
+        <h1>Про нашу шкільну їдальню</h1>
+        <p>
+          Ми пропонуємо свіжі та смачні страви для учнів нашої школи. Наша мета
+          — забезпечити кожного смачними та корисними стравами!
+        </p>
+        <a href="index.html" class="btn-home">Повернутися на головну</a>
+      </section>
     </main>
 
     <footer>
-        <div class="footer-info">
-            <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
-        </div>
+      <div class="footer-info">
+        <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
