--- a/pages/wallet.html
+++ b/pages/wallet.html
@@ -110,14 +110,13 @@ nav ul li a:hover {
     </header>
     <header>
         <nav>
-          <ul>
-            <li><a href="./index.html">Головна</a></li>
-            <li><a href=".././menu.html">Меню</a></li>
-            <li><a href="../tests/index.html">Тести</a></li>
-            <li><a href=".././games.html">Ігри</a></li>
-            <li><a href="./contacts.html">Контакти</a></li>
-          </ul>
-        </nav>
+            <ul>
+              <li><a href="#">Головна</a></li>
+              <li><a href="#">Меню</a></li>
+              <li><a href="#">Тести</a></li>
+              <li><a href="#">Контакти</a></li>
+            </ul>
+          </nav>
       </header>
     <div class="content">
         <div class="wallet-box">
