--- a/pages/about.html
+++ b/pages/about.html
@@ -1,299 +1,204 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Про нас - Шкільна їдальня</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <!-- Підключення стилів для навігації -->
-    <link rel="stylesheet" href="./navigation.css" />
     <style>
-      /* Оновлені стилі для сторінки "Про нас" */
-      /* Основні стилі для всього сайту */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Arial", sans-serif;
-      }
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+            margin: 0;
+            padding: 0;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow-x: hidden; /* Додано, щоб уникнути горизонтального скролу */
+        }
 
-      /* Базовий стиль для body */
-      body {
-        background: #f4f7fc;
-        color: #333;
-        font-size: 16px;
-      }
+        header {
+            background-color: #2a2a72;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            animation: slideIn 0.8s ease-out;
+            width: 100%;
+        }
 
-      /* Стилі для хедера */
-      header {
-        background-color: #2a2a72; /* Темно-синій фон */
-        padding: 20px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 1000;
-      }
-
-      /* Навігаційне меню */
-      nav ul {
-        list-style-type: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
-      }
-
-      nav ul li {
-        margin: 0 15px;
-      }
-
-      nav ul li a {
-        text-decoration: none;
-        color: #fff;
-        font-size: 18px;
-        transition: color 0.3s, transform 0.3s ease-in-out;
-        padding: 5px 10px;
-        border-radius: 5px;
-      }
-
-      nav ul li a:hover,
-      nav ul li a:focus {
-        color: #ffcc00; /* Золотистий колір при наведенні */
-        transform: scale(1.1);
-      }
-
-      /* Стилі для мобільних пристроїв */
-      @media (max-width: 768px) {
         nav ul {
-          flex-direction: column;
-          align-items: flex-start;
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            padding: 0;
+            margin: 0;
         }
 
         nav ul li {
-          margin: 10px 0;
-        }
-      }
-
-      /* Стилі для активної сторінки */
-      nav ul li a.active {
-        color: #ffcc00; /* Виділення активного елемента */
-        font-weight: bold;
-      }
-
-      /* Основний контент */
-      main {
-        padding-top: 100px; /* Залишає місце для фіксованого хедера */
-        text-align: center;
-      }
-
-      /* Стилі для футера */
-      footer {
-        text-align: center;
-        background-color: #2a2a72;
-        color: #fff;
-        padding: 10px;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-
-      /* Стилі для кнопок (якщо є) */
-      button {
-        background-color: #ffcc00;
-        color: #2a2a72;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      button:hover {
-        background-color: #ff9900;
-      }
-
-      body {
-        font-family: "Orbitron", sans-serif;
-        background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
-        margin: 0;
-        padding: 0;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-        overflow-x: hidden;
-      }
-
-      header {
-        background: rgba(0, 0, 0, 0.7);
-        padding: 15px 0;
-        text-align: center;
-        position: sticky;
-        top: 0;
-        z-index: 100;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        animation: slideIn 0.8s ease-out;
-      }
-
-      nav ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-      }
-
-      nav ul li {
-        margin: 0 15px;
-      }
-
-      nav ul li a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        transition: color 0.3s ease, transform 0.3s ease;
-        font-size: 18px;
-      }
-
-      nav ul li a:hover {
-        color: #ff9a9e;
-        transform: scale(1.1);
-        text-shadow: 0 0 8px #ff9a9e;
-      }
-
-      /* Анімація для заголовка */
-      @keyframes slideIn {
-        0% {
-          transform: translateY(-100%);
+            margin: 0 15px;
         }
 
-        100% {
-          transform: translateY(0);
-        }
-      }
-
-      .about-section {
-        text-align: center;
-        padding: 80px 20px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 15px;
-        margin: 50px auto;
-        max-width: 800px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        animation: fadeInUp 1s ease-out;
-      }
-
-      .about-section h1 {
-        font-size: 3.5em;
-        text-shadow: 0 0 10px #fff, 0 0 20px #66a6ff;
-        margin-bottom: 20px;
-      }
-
-      .about-section p {
-        font-size: 1.4em;
-        line-height: 1.6;
-        color: #f0f0f0;
-        text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-      }
-
-      footer {
-        background: rgba(0, 0, 0, 0.7);
-        padding: 20px;
-        text-align: center;
-        color: white;
-        font-size: 1em;
-        margin-top: auto;
-        position: relative;
-        box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.3);
-      }
-
-      footer p {
-        margin: 0;
-      }
-
-      /* Анімація для появи елементів */
-      @keyframes fadeInUp {
-        0% {
-          opacity: 0;
-          transform: translateY(20px);
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 5px 10px;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
 
-        100% {
-          opacity: 1;
-          transform: translateY(0);
+        nav ul li a:hover {
+            color: #ffcc00;
+            transform: scale(1.1);
         }
-      }
 
-      /* Стиль для кнопки повернення на головну */
-      .btn-home {
-        padding: 12px 24px;
-        background-color: #66a6ff;
-        color: white;
-        font-size: 18px;
-        font-weight: bold;
-        border-radius: 50px;
-        text-decoration: none;
-        display: inline-block;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        margin-top: 20px;
-      }
+        /* Стилі для секції "Про нас" */
+        .about-section {
+            text-align: center;
+            padding: 80px 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            margin: 50px auto;
+            max-width: 800px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            animation: fadeInUp 1s ease-out;
+        }
 
-      .btn-home:hover {
-        background-color: #ff6a6a;
-        transform: scale(1.05);
-        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
-      }
-
-      /* Додаткові стилі для адаптивності */
-      @media (max-width: 768px) {
         .about-section h1 {
-          font-size: 2.5em;
+            font-size: 3.5em;
+            text-shadow: 0 0 10px #fff, 0 0 20px #66a6ff;
+            margin-bottom: 20px;
         }
 
         .about-section p {
-          font-size: 1.2em;
+            font-size: 1.4em;
+            line-height: 1.6;
+            color: #f0f0f0;
+            text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         }
 
+        /* Стилі для кнопки "Повернутися на головну" */
         .btn-home {
-          padding: 10px 20px;
-          font-size: 16px;
+            display: inline-block;
+            margin-top: 30px;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            font-weight: bold;
+            background-color: #ffcc00;
+            color: #2a2a72;
+            text-decoration: none;
+            border-radius: 50px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
-      }
+
+        .btn-home:hover {
+            background-color: #ff9900;
+            transform: scale(1.1);
+        }
+
+        /* Стилі для футера */
+        footer {
+            background-color: #2a2a72;
+            padding: 20px;
+            text-align: center;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        /* Адаптивні стилі для мобільних пристроїв */
+        @media (max-width: 768px) {
+            .about-section h1 {
+                font-size: 2.5em;
+            }
+
+            .about-section p {
+                font-size: 1.2em;
+            }
+
+            .btn-home {
+                padding: 12px 25px;
+                font-size: 1em;
+            }
+
+            nav ul {
+                flex-direction: column;
+                padding: 0;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+            }
+
+            nav ul li a {
+                font-size: 16px;
+            }
+        }
+
+        /* Анімація для елементів */
+        @keyframes slideIn {
+            from {
+                transform: translateY(-100%);
+            }
+            to {
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Відступи для основного контенту */
+        main {
+            margin-top: 120px; /* Відступ для контенту після хедера */
+            flex: 1; /* Забезпечує, щоб основний контент займав весь доступний простір */
+        }
+
     </style>
-  </head>
+</head>
+<body>
 
-  <body>
-    <header>
-      <nav>
+<header>
+    <nav>
         <ul>
-          <li><a href="./index.html">Головна</a></li>
-          <li><a href="../menu.html">Меню</a></li>
-          <li><a href="../tests/index.html">Тести</a></li>
-          <li><a href="../games.html">Ігри</a></li>
-          <li><a href="./contacts.html">Контакти</a></li>
+            <li><a href="./index.html">Головна</a></li>
+            <li><a href="../menu.html">Меню</a></li>
+            <li><a href="../tests/index.html">Тести</a></li>
+            <li><a href="../games.html">Ігри</a></li>
+            <li><a href="./contacts.html">Контакти</a></li>
         </ul>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <main>
-      <section class="about-section">
+<main>
+    <section class="about-section">
         <h1>Про нашу шкільну їдальню</h1>
         <p>
-          Ми пропонуємо свіжі та смачні страви для учнів нашої школи. Наша мета
-          — забезпечити кожного смачними та корисними стравами!
+            Ми пропонуємо свіжі та смачні страви для учнів нашої школи. Наша мета — забезпечити кожного смачними та корисними стравами!
         </p>
         <a href="index.html" class="btn-home">Повернутися на головну</a>
-      </section>
-    </main>
+    </section>
+</main>
 
-    <footer>
-      <div class="footer-info">
+<footer>
+    <div class="footer-info">
         <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
-      </div>
-    </footer>
-  </body>
+    </div>
+</footer>
+
+</body>
 </html>
